--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -131,7 +131,7 @@
               </thead>
               <tbody id="errors">
               <tr>
-                <td colspan="2"class="text-center">에러가 없습니다</td>
+                <td colspan="2"class="text-center">There's no error</td>
               </tr>
               </tbody>
             </table>
@@ -157,7 +157,7 @@
           </thead>
           <tbody id="txs">
           <tr>
-            <td colspan="8" class="text-center">거래내역이 없습니다</td>
+            <td colspan="8" class="text-center">There's no transaction history</td>
           </tr>
           </tbody>
         </table>
