--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout/theme">
-<head></head>
-
+<head>
+</head>
 <body>
 
   <th:block layout:fragment="content">
@@ -20,7 +20,10 @@
               <tbody>
               <tr>
                 <th>Database</th>
-                <td id="database-nw"></td>
+                <td id="database-nw">
+                  <span th:if="${isDBCon}"><i class="fas fa-check"></i></span>
+                  <span th:unless="${isDBCon}"><i class="fas fa-times"></i></span>
+                </td>
               </tr>
               <tr>
                 <th>Database Auth.</th>
@@ -99,7 +102,7 @@
               </thead>
               <tbody>
               <tr>
-                <th>Account</th>
+                <th>Wallet</th>
                 <td id="wallet-count"></td>
               </tr>
               <tr>
@@ -111,7 +114,7 @@
                 <td id="balance"></td>
               </tr>
               <tr>
-                <th>Lock</th>
+                <th>Encrypted(default)</th>
                 <td id="wallet-lock"></td>
               </tr>
               </tbody>
@@ -145,8 +148,8 @@
         <table class="table table-bordered table-sm">
           <thead>
           <tr>
-            <th scope="col">Uid</th>
-            <th scope="col">Type</th>
+            <th scope="col">Wallet</th>
+            <th scope="col">Purpose</th>
             <th scope="col">TX Hash</th>
             <th scope="col">To Address</th>
             <th scope="col">Amount</th>
@@ -163,6 +166,78 @@
         </table>
       </div>
     </div>
+  </th:block>
+
+  <th:block layout:fragment="script">
+  <script>
+      function unixToStr(unix_timestamp) {
+          var date = new Date(unix_timestamp*1000);
+          var month = date.getMonth()+1;
+          var day = date.getDate();
+          // Hours part from the timestamp
+          var hours = date.getHours();
+          // Minutes part from the timestamp
+          var minutes = date.getMinutes();
+          // Seconds part from the timestamp
+          // var seconds = date.getSeconds();
+          // Will display time in 10:30:23 format
+          return month + '.' + day + ' ' + hours + ':' + minutes;
+      }
+      $(function () {
+          $.post("/api/v1/dashboard", null, function (data) {
+              // console.log('data ' + JSON.stringify(data));
+              // {"code":999,"error":null,
+              // "result":{"startCount":539732,"syncCount":0,"bestCount":571449,"balance":0}}
+              $("#startCount").text(data.result.startCount);
+              $("#syncCount").text(data.result.syncCount);
+              $("#bestCount").text(data.result.bestCount);
+              $("#balance").text(data.result.balance);
+              $("#wallet-count").text(data.result.walletCount);
+              $("#osname").text(data.result.systemInfo.osName);
+              $("#memusage").text(Math.round(parseFloat(data.result.systemInfo.memoryUsage / data.result.systemInfo.memoryMax * 100).toFixed(2)) + '%');
+              $("#diskusage").text(Math.round(parseFloat(data.result.systemInfo.diskUsage / data.result.systemInfo.diskMax * 100).toFixed(2)) + '%');
+          });
+          $.post("/api/v1/lasttransactions", null, function (data) {
+              // console.log('data ' + JSON.stringify(data));
+              var str = '';
+              if (data.result.txs && data.result.txs.length > 0) {
+                  for (var i = 0; i < data.result.txs.length; i++) {
+                      var fee = data.result.txs[i].fee == 0 ? '-' : data.result.txs[i].fee.toFixed(8);
+                      str += '<tr><td scope="row" class="ellipsis">' + data.result.txs[i].uid + '</td>'
+                          + '<td>' + data.result.txs[i].category + '</td>'
+                          + '<td class="ellipsis"><a target="_blank" class="blue-text" href="https://live.blockcypher.com/btc-testnet/tx/'
+                          + data.result.txs[i].txid + '">' + data.result.txs[i].txid + '</a></td>'
+                          + '<td class="ellipsis">' + data.result.txs[i].toAddr + '</td>'
+                          + '<td>' + data.result.txs[i].amount.toFixed(8) + '</td>'
+                          + '<td>' + fee + '</td>'
+                          + '<td>' + data.result.txs[i].confirm + '</td>'
+                          + '<td>' + unixToStr(data.result.txs[i].txTime) + '</td></tr>';
+                  }
+                  $("#txs").html(str);
+              }
+              $("#transaction-count").text(data.result.totalCount);
+          });
+          $.post("/api/v1/geterrors", null, function (data) {
+              // console.log('data ' + JSON.stringify(data));
+              if (data.result === null || typeof (data.result) === 'undefined'
+                  || data.result.length < 1) {
+                  return;
+              }
+              var str = '';
+              // regDt, id, error
+              for (var i = 0; i < 5; i++) {
+                  if (data.result.length>0 && i<data.result.length) {
+                      str += '<tr><td class="text-left">' + data.result[i].error.replace('\n', '<br>') + '</td>'
+                          + '<td>' + data.result[i].regDt.substring(5,16).replace('T', ' ')
+                              .replace('-', '.') + '</td></tr>';
+                  } else {
+                      str += '<tr><td>&nbsp;</td><td>&nbsp;</td></tr>';
+                  }
+              }
+              $("#errors").html(str);
+          });
+      });
+  </script>
   </th:block>
 
 </body>
