--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -190,15 +190,19 @@
               // console.log('data ' + JSON.stringify(data));
               // {"code":999,"error":null,
               // "result":{"startCount":539732,"syncCount":0,"bestCount":571449,"balance":0}}
-              $("#startCount").text(data.result.startCount);
-              $("#syncCount").text(data.result.syncCount);
-              $("#bestCount").text(data.result.bestCount);
-              $("#balance").text(data.result.balance);
-              $("#wallet-count").text(data.result.walletCount);
-              $("#osname").text(data.result.systemInfo.osName);
-              $("#memusage").text(Math.round(parseFloat(data.result.systemInfo.memoryUsage / data.result.systemInfo.memoryMax * 100).toFixed(2)) + '%');
-              $("#diskusage").text(Math.round(parseFloat(data.result.systemInfo.diskUsage / data.result.systemInfo.diskMax * 100).toFixed(2)) + '%');
+              if (data.code===999) {
+	              $("#startCount").text(data.result.startCount);
+	              $("#syncCount").text(data.result.syncCount);
+	              $("#bestCount").text(data.result.bestCount);
+	              $("#balance").text(data.result.balance);
+	              $("#wallet-count").text(data.result.walletCount);
+	              $("#osname").text(data.result.systemInfo.osName);
+	              $("#memusage").text(Math.round(parseFloat(data.result.systemInfo.memoryUsage / data.result.systemInfo.memoryMax * 100).toFixed(2)) + '%');
+	              $("#diskusage").text(Math.round(parseFloat(data.result.systemInfo.diskUsage / data.result.systemInfo.diskMax * 100).toFixed(2)) + '%');
+              }
               $("#progress-spinner").hide();
+          }).fail(function() {
+        	  $("#progress-spinner").hide();
           });
           $.post("/api/v1/lasttransactions", null, function (data) {
               // console.log('data ' + JSON.stringify(data));
