UI 사소한 수정사항

--- a/src/main/resources/templates/layout/theme.html
+++ b/src/main/resources/templates/layout/theme.html
@@ -43,7 +43,7 @@
     .first-row .card { min-height: 270px; }
     .container-fluid { padding: 15px 20px; }
     .card-body { padding: 0.4rem; min-height: 97px; }
-
+	
     .navbar { background-color: white !important; -webkit-box-shadow: 3px 3px 5px -4px rgba(0, 0, 0, 0.75);
       -moz-box-shadow: 3px 3px 5px -4px rgba(0, 0, 0, 0.75);
       box-shadow: 3px 3px 5px -4px rgba(0, 0, 0, 0.75); }
@@ -53,6 +53,7 @@
     a.nav-link { font-size: 16px; color: inherit; min-width: 62px; }
     .btn-group .svg-inline--fa { font-size: 20px; }
     #btn-amt-values .btn { padding: 2px 11px; }
+    .btn-walletname { min-width: 50px; }
     .btn-link-ext { background-image: url(/img/ic-ext.png); background-size: 12px;
       background-repeat: no-repeat; background-position: right 5px top 5px; }
     .table { margin-bottom: 0; }
